/*
 * $Id: ChangeLog,v 1.2697 2004/03/31 09:19:27 andijahja Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2004-03-31 18:00 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/compiler/harbour.sly
    + Generate line number information for the debugger for DO CASE statement
      (borrowed from Harbour, by Ryszard Glab).
  * source/debug/debugger.prg
    + Show line number information when source file can't be found
      (borrowed from Harbour, by Ryszard Glab).

2004-03-31 15:45 UTC+0300 Phil Krylov <phil@newstar.rinet.ru>
  * source/vm/macro.c
    ! Fixed hb_compMemvarGenPCode(), hb_compGenPopVar(),
      hb_compGenPopAliasedVar() to not set any error flag and not generate
      associated pcode, when macro expression references an undeclared
      memvar in assignment context if HB_MACRO_GEN_TYPE is set (that is,
      when evaluating the expression type). Updated hb_compMemvarGenPCode()
      calls in hb_compGenPushVar(), hb_compGenPushVarRef(),
      hb_compGenPushMemVarRef(), hb_compGenPushAliasedVar() to reflect the
      new syntax. All this is done to achieve Clipper compatibility of
      Type() function.
  * include/hbmacro.h
    ! Updated prototype for hb_compMemvarGenPCode().
  * doc/en/hb_macro.txt
    * Updated documentation stub for hb_compMemvarGenPCode().

2004-03-31 04:15 UTC+0700 Andi Jahja <xharbour@cbn.net.id>
  * source/vm/errorapi.c
  * source/vm/hvm.c
  * source/vm/runner.c
  * source/rtl/direct.c
  * source/rtl/memvars.c
    - remove in-file function declarations

  * include/hbserv.h
    ! function protos put in extern "C"

  * include/hbapcdp.h
    + function declaration: hb_cdpReleaseAll()

  * include/hbapigt.h
    + function declaration: hb_gtIndexedColor()

  * include/hbapi.h
    + function declaration: hb_strAtSkipStrings(), hb_strLowerCopy(),
      Wild2RegEx(), hb_regex()
